# WeeklyCuration

./: .gitignore  EVERY_ISSUE.md  LICENSE  Makefile  README.md  ls-notion-database.json
weekly-curation/: Makefile  pyproject.toml  sample_db_response.py
weekly-curation/src/weekly_curation/: issue_repository.py  newsletter.py  presenters.py
weekly-curation/src/weekly_curation/infrastructure/: notion_issue_repository.py
weekly-curation/tests/: sample_issue.md  sample_notion_result.py  test_issue.py  test_presentation.py
weekly-curation/tests/infrastructure/: test_notion_issue_repository.py
